--- a/Gym Web Application/Gym Web Application/Views/Clients/ViewClients.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Clients/ViewClients.cshtml
@@ -15,8 +15,19 @@
                         <div class="col text-right">
                             <input class="table-search-bar" placeholder="Search for Client">
                         </div>
+@{
+    // Retrieve the JobTitleID from the session
+    int? jobTitleId = null;
+    if (ViewContext.HttpContext != null && ViewContext.HttpContext.Session != null)
+    {
+        jobTitleId = Convert.ToInt32(ViewContext.HttpContext.Session.GetString("EmployeeJobTitleID"));
+    }
+}
                         <div class="col text-right">
+                            @if(jobTitleId != 3 )
+                            {
                             <a class="btn-add" asp-controller="Clients" asp-action="AddClients">Add Client</a>
+                            }
                         </div>
                     </div>
                 </div>
@@ -30,10 +41,13 @@
                                 <th scope="col">Age</th>
                                 <th scope="col">Gender</th>
                                 <th scope="col">Phone</th>
+
+                            @if(jobTitleId != 3 )
+                            {
                                 <th scope="col">Memberships</th>
                                 <th scope="col">Classes</th>
                                 <th scope="col">Action</th>
-
+                            }
                             </tr>
                         </thead>
                         <tbody>
@@ -58,6 +72,8 @@
                                 <td>
                                     @client.PhoneNumber
                                 </td>
+                            @if(jobTitleId != 3 )
+                            {
                                 <td>
                                 @if(ViewBag.hasActiveMembership[ViewBag.clients.IndexOf(client)]){
                                     <button class="btn btn-sm btn-activate" type="button" disabled>Activated</button>
@@ -78,6 +94,7 @@
                                         <button type="submit" class="btn btn-sm btn-danger">Delete</button>
                                     }
                                 </td>
+                                }
                             </tr>
                             }
                         </tbody>
