--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -94,12 +94,16 @@
                         </a>
                     </li>
                     }
+
+                    @if(jobTitleId==1)
+                    {
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Attendance" asp-action="ViewAttendance">
                             <i class="fa fa-desktop"></i>
                             <span class="nav-link-text">Attendance Tracking</span>
                         </a>
                     </li>
+                    }
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Home" asp-action="Logout">
                             <i class="fa fa-lock text-danger"></i>
